# icloud-mcp-server

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CONTEXT.md  DESIGN_SPEC_GAPS.md  Dockerfile  README.md  autoresearch.checks.sh  autoresearch.config.json  autoresearch.ideas.md  autoresearch.jsonl  autoresearch.md  autoresearch.sh  compose.yaml  pyproject.toml
.github/workflows/: ci-cd.yml  security.yml
docs/design/: design.md
scripts/: run-live-sync-smoke.sh  setup-all-mcp.sh  setup-claude-code-mcp.sh  setup-codex-mcp.sh  setup-hermes-agent-mcp.sh  setup.sh
scripts/lib/: icloud_mcp_setup.sh
src/icloud_mcp/: __init__.py  config.py  dashboard.html  dashboard.py  server.py  util.py
src/icloud_mcp/adapters/: __init__.py  caldav_calendar.py  carddav_contacts.py  imap_mail.py
src/icloud_mcp/calendar/: adapter.py  cache.py  schemas.py  sync.py  tools.py  validation.py  write.py
src/icloud_mcp/contacts/: adapter.py  cache.py  sync.py  tools.py
src/icloud_mcp/dashboard/: runtime.py  tools.py
src/icloud_mcp/db/: cache_state.py  calendar_repository.py  connection.py  contacts_repository.py  mail_repository.py  maintenance_repository.py  models.py  query_cache.py  repositories.py  search_index.py  search_repository.py
src/icloud_mcp/db/migrations/: __init__.py
src/icloud_mcp/indexing/: chunker.py  embeddings.py  fts.py  query_planner.py  vector.py  vector_backend.py
src/icloud_mcp/mail/: adapter.py  cache.py  schemas.py  sync.py  tools.py
src/icloud_mcp/mcp/: boundary.py  server.py
src/icloud_mcp/observability/: audit.py  metrics.py
src/icloud_mcp/platform/: audit.py  config.py  dav_xml.py  logging.py  metrics.py  secrets.py
src/icloud_mcp/schemas/: calendar.py  contacts.py
src/icloud_mcp/search/: embeddings.py  fts.py  maintenance.py  normalizers.py  policy.py  query_cache.py  query_planner.py  repository.py  rerank.py  schemas.py  service.py  tools.py  vector.py  vector_backend.py
src/icloud_mcp/security/: auth.py  redaction.py  secrets.py
src/icloud_mcp/services/: __init__.py  calendar_write.py  search.py  search_policy.py
src/icloud_mcp/storage/: cache_state.py  connection.py
src/icloud_mcp/storage/migrations/: __init__.py
src/icloud_mcp/sync/: __init__.py  calendar_sync.py  capabilities.py  checkpoints.py  contacts_sync.py  delta.py  mail_sync.py  scheduler.py  tools.py
src/icloud_mcp/tools/: boundary.py  calendar_tools.py  contact_tools.py  dashboard_tools.py  mail_tools.py  search_tools.py  sync_tools.py
tests/integration/: __init__.py  test_live_sync_smoke.py
tests/unit/: test_calendar_write_service.py  test_coverage_edges.py  test_dashboard.py  test_docker_assets.py  test_local_mvp.py  test_mcp_contracts.py  test_protocol_adapters.py  test_spec_closure.py  test_sync_workers.py
