[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "icloud-mcp-server"
version = "0.1.0"
description = "Local-first FastMCP server for cached iCloud Mail, Calendar, and Contacts search."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastmcp",
  "pydantic",
  "imapclient",
  "caldav",
  "httpx",
  "vobject",
  "icalendar",
  "python-dateutil",
  "beautifulsoup4",
  "defusedxml",
  "keyring",
]

[project.optional-dependencies]
dev = [
  "coverage[toml]",
  "ruff",
]

[project.scripts]
icloud-mcp = "icloud_mcp.mcp.server:main"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.hatch.build.targets.wheel]
packages = ["src/icloud_mcp"]

[tool.coverage.run]
source = ["src/icloud_mcp"]
branch = false
relative_files = true

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_empty = true
precision = 2
